[gd_scene load_steps=5 format=3 uid="uid://bx7l1le6u5amj"]

[ext_resource type="Script" path="res://menu.gd" id="1_30ag3"]
[ext_resource type="Texture2D" uid="uid://co2qng71c5251" path="res://UI/TL_MenuScreen.png" id="2_gw1o0"]

[sub_resource type="Theme" id="Theme_465h5"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_f7u6y"]
default_font_size = 10

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_30ag3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gw1o0")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -110.0
offset_right = 173.0
offset_bottom = -9.0
grow_vertical = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="Play" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Credits" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits & Controls"

[node name="Quit" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MarginContainer2" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -110.0
offset_right = -11.0
offset_bottom = -47.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer2"]
layout_mode = 2

[node name="RS_PF_Text" type="RichTextLabel" parent="TextureRect/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_465h5")
text = "Rooms per level:"
fit_content = true

[node name="RoomsSlider" type="HSlider" parent="TextureRect/MarginContainer2/VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 10.0
value = 3.0
rounded = true

[node name="RS_Label" type="RichTextLabel" parent="TextureRect/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_f7u6y")
bbcode_enabled = true
text = "Rooms: 3"
fit_content = true
scroll_active = false

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="drag_ended" from="TextureRect/MarginContainer2/VBoxContainer/RoomsSlider" to="." method="_on_rooms_slider_drag_ended"]
[connection signal="value_changed" from="TextureRect/MarginContainer2/VBoxContainer/RoomsSlider" to="." method="_on_rooms_slider_value_changed"]
